# columna

./: .gitignore  CLAUDE.md  NOTICE  README.md  pyproject.toml  pytest.ini
apps/demo-endpoint-vercel/: README.md  index.py  pyproject.toml  vercel.json
apps/demo-endpoint-vercel/scripts/: generate.py
docs/: README.md  columna_framework_manual_6e.md  columna_reference_manual_5e.md  frame_ql_manual_v1.md
eval_runs/: run6.py  run7.py
research/: README.md
reserve/trutina-core/: pyproject.toml
reserve/trutina-core/trutina_core/: __init__.py
scripts/: assert_pypi_versions.py
snapshots/: 2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
specs/: audit_forks.md  case_demo_ch1_setup_v0_2.md  case_demo_ch1_setup_v0_3.md  case_demo_ch2_solutioning_v0_5.md  case_demo_ch3_live_v0_2.md  case_demo_ch3_live_v0_4.md  case_demo_ch3_live_v0_5.md  case_demo_ch3_live_v0_7.md  deploy_exceptions.md  doctrine_gaps.md  launch_checklist_v1.md  open_forks.md  recapture_trigger_line_draft_v0_1.md  release_notes_v0_10_0.md  release_notes_v0_11_0.md  release_notes_v0_8_0.md  release_notes_v0_9_0.md  release_prep_next.md  two_pillars_strategy_note_v0_4.md  universe_visual_design_brief_v0_1.md  v0_7_8_worklist.md  wp0_repo_tests_packaging_spec.md  wp2_2_mcp_server_spec.md  wp2_3_demo_quickstart_spec.md  wp2_4_query_agent_spec.md  wp5_1_addendum_v2.md  wp5_1_checkpoint_b_exhibit_script_v0_2.md  wp5_1_checkpoint_c_plan.md  wp5_1_site_widget_spec.md  wp_cp2_eval_run_record_v0_1.md  wp_cp2_init_opening_proposal_v0_1.md  wp_cp2_knowledge_package_draft_v0_1.md  (+11 more)
(+145 files in other folders)
